--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -671,15 +671,20 @@ jobs:
 
         - name: Create GitHub Release
           if: github.ref_type == 'tag'
-          uses: softprops/action-gh-release@v1
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          with:
-            files: ${{ env.IPA_FILE }}
-            tag_name: ${{ env.TAG_NAME }}
-            generate_release_notes: true
-            draft: false
-            prerelease: ${{ contains(env.TAG_NAME, 'beta') || contains(env.TAG_NAME, 'rc') }}
+          run: |
+            # Determine if this is a prerelease
+            PRERELEASE_FLAG=""
+            if [[ "${{ env.TAG_NAME }}" == *"beta"* || "${{ env.TAG_NAME }}" == *"rc"* ]]; then
+              PRERELEASE_FLAG="--prerelease"
+            fi
+
+            # Create release with GitHub CLI
+            gh release create "${{ env.TAG_NAME }}" \
+              "${{ env.IPA_FILE }}" \
+              --title "${{ env.TAG_NAME }}" \
+              --generate-notes \
+              --latest=false \
+              $PRERELEASE_FLAG
 
       - name: Upload Enhanced Artifacts
         if: always() && env.IPA_FILE != ''
