--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -670,18 +670,25 @@ jobs:
            projects: opencode-nexus-frontend,opencode-nexus-backend
 
         - name: Create GitHub Release
-          if: github.ref_type == 'tag'
           run: |
-            echo "Creating GitHub release for tag: $TAG_NAME"
+            echo "GitHub ref type: ${{ github.ref_type }}"
+            echo "Tag name: $TAG_NAME"
             echo "IPA file: $IPA_FILE"
 
-            # Determine if this is a prerelease
-            if [[ "$TAG_NAME" == *"beta"* || "$TAG_NAME" == *"rc"* ]]; then
-              echo "Detected prerelease tag, using --prerelease flag"
-              gh release create "$TAG_NAME" "$IPA_FILE" --title "$TAG_NAME" --generate-notes --latest=false --prerelease
+            # Only create release for tags
+            if [[ "${{ github.ref_type }}" == "tag" ]]; then
+              echo "Creating GitHub release for tag: $TAG_NAME"
+
+              # Determine if this is a prerelease
+              if [[ "$TAG_NAME" == *"beta"* || "$TAG_NAME" == *"rc"* ]]; then
+                echo "Detected prerelease tag, using --prerelease flag"
+                gh release create "$TAG_NAME" "$IPA_FILE" --title "$TAG_NAME" --generate-notes --latest=false --prerelease
+              else
+                echo "Regular release tag"
+                gh release create "$TAG_NAME" "$IPA_FILE" --title "$TAG_NAME" --generate-notes --latest=false
+              fi
             else
-              echo "Regular release tag"
-              gh release create "$TAG_NAME" "$IPA_FILE" --title "$TAG_NAME" --generate-notes --latest=false
+              echo "Skipping GitHub release creation (not a tag push)"
             fi
 
       - name: Upload Enhanced Artifacts
