debug: temporarily comment out Sentry release step
- Comment out Sentry action to isolate workflow parsing issues
- Test if the YAML parses correctly without Sentry step
- Will re-enable once basic workflow works

--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -659,15 +659,15 @@ jobs:
            rm -rf "$TEMP_KEY_DIR"
            echo "✅ Enhanced TestFlight upload completed"
 
-       - name: Create Sentry Release
-         uses: getsentry/action-release@v1
-         env:
-           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-           SENTRY_ORG: unfergettable-designs
-         with:
-           environment: production
-           version: ${{ env.VERSION_NUMBER }}
-           projects: opencode-nexus-frontend,opencode-nexus-backend
+        # - name: Create Sentry Release
+        #   uses: getsentry/action-release@v1
+        #   env:
+        #     SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+        #     SENTRY_ORG: unfergettable-designs
+        #   with:
+        #     environment: production
+        #     version: ${{ env.VERSION_NUMBER }}
+        #     projects: opencode-nexus-frontend,opencode-nexus-backend
 
         - name: Create GitHub Release
           run: |
