--- a/.actrc
+++ b/.actrc
@@ -2,20 +2,22 @@
 # This file configures Docker images for local GitHub Actions testing
 
 # Use the official act images for Ubuntu and macOS runners
--P ubuntu-latest=nektos/act-ubuntu-latest:latest
--P ubuntu-22.04=nektos/act-ubuntu-latest:latest
--P macos-14=nektos/act-macos-latest:latest
--P macos-13=nektos/act-macos-latest:latest
+-P ubuntu-latest=ghcr.io/catthehacker/ubuntu:full-latest
+-P ubuntu-22.04=ghcr.io/catthehacker/ubuntu:full-latest
+-P macos-14=ghcr.io/catthehacker/ubuntu:full-latest
+-P macos-13=ghcr.io/catthehacker/ubuntu:full-latest
 
-# Default platform for workflows
-# Remove this line if you want to be prompted for platform selection
-# -P ubuntu-latest=catthehacker/ubuntu:act-latest
+# Reuse containers between runs for faster testing
+reuse-containers
+
+# Use ARM64 architecture (for Apple Silicon Macs)
+container-architecture linux/arm64
 
 # Enable verbose output for debugging
-# -v
+verbose
 
-# Use specific secrets file for local testing
-# -s .secrets.local
+# Bind current directory for file access
+bind
 
-# Don't use the default secret file
-# -s
+# Use specific secrets file for local testing (uncomment when needed)
+# secret-file .secrets.local
