--- a/.github/workflows/test-mobile-e2e.yml
+++ b/.github/workflows/test-mobile-e2e.yml
@@ -117,7 +117,7 @@ jobs:
 
   ios-native-e2e:
     name: iOS Native E2E Tests
-    runs-on: macos-14
+    runs-on: self-hosted
     if: github.event.inputs.run_native_tests == 'true'
     
     steps:
