--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -56,8 +56,8 @@ jobs:
         run: |
           cd frontend
           bun install --frozen-lockfile
-          NODE_ENV=production bun run build
-          cd ..
+           NODE_ENV=production bun run build
+           cd ..
 
       - name: Rust Pre-build
         run: |
@@ -65,6 +65,26 @@ jobs:
           export IPHONEOS_DEPLOYMENT_TARGET=14.0
           cargo build --target aarch64-apple-ios --release --lib
           cd ..
+
+      - name: Install iOS Dependencies
+        run: |
+           # Install Homebrew if not present
+           if ! command -v brew &> /dev/null; then
+             echo "Installing Homebrew..."
+             /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+             echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> ~/.zprofile
+             eval "$(/opt/homebrew/bin/brew shellenv)"
+           fi
+
+           # Install xcodegen and cocoapods
+           echo "Installing xcodegen..."
+           brew install xcodegen
+           echo "Installing cocoapods..."
+           brew install cocoapods
+
+           # Verify installations
+            xcodegen --version
+            pod --version
 
       - name: iOS Project Setup
         run: |
