--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -74,12 +74,27 @@ jobs:
            if command -v xcodegen &> /dev/null; then
              echo "✅ xcodegen found: $(xcodegen --version)"
            else
-             echo "❌ xcodegen not found"
-             echo "Please install xcodegen on the self-hosted runner"
-             echo "Installation options:"
-             echo "  - brew install xcodegen (requires admin)"
-             echo "  - Download from: https://github.com/yonaskolb/XcodeGen/releases"
-             exit 1
+             echo "❌ xcodegen not found, attempting to install..."
+             # Try to install xcodegen without admin privileges
+             if command -v brew &> /dev/null; then
+               echo "Trying brew install (may fail without sudo)..."
+               brew install xcodegen || echo "Brew install failed, trying direct download..."
+             fi
+
+             # Try direct download as fallback
+             echo "Downloading xcodegen binary directly..."
+             curl -L -o xcodegen.tar.gz https://github.com/yonaskolb/XcodeGen/releases/download/2.40.1/xcodegen.tar.gz
+             tar -xzf xcodegen.tar.gz
+             chmod +x xcodegen
+             sudo mv xcodegen /usr/local/bin/ 2>/dev/null || mv xcodegen ~/bin/ && export PATH="$HOME/bin:$PATH"
+
+             if command -v xcodegen &> /dev/null; then
+               echo "✅ xcodegen installed: $(xcodegen --version)"
+             else
+               echo "❌ Failed to install xcodegen"
+               echo "Please pre-install xcodegen on the self-hosted runner"
+               exit 1
+             fi
            fi
 
            if command -v pod &> /dev/null; then
