fix: use sudo for cocoapods installation
CRITICAL: CI user lacks permission to install gems
- Changed gem install to sudo gem install
- This should allow cocoapods installation on self-hosted runner
- Testing if sudo works for gem installation

Self-hosted runner may need sudo access for gem installs

--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -80,11 +80,11 @@ jobs:
 
            if command -v pod &> /dev/null; then
              echo "✅ cocoapods found: $(pod --version)"
-           else
-             echo "Installing cocoapods..."
-             gem install cocoapods
-             echo "✅ cocoapods installed: $(pod --version)"
-           fi
+            else
+              echo "Installing cocoapods..."
+              sudo gem install cocoapods
+              echo "✅ cocoapods installed: $(pod --version)"
+            fi
 
            echo "All iOS dependencies verified!"
 
