fix: use --user-install for cocoapods gem installation
CRITICAL: sudo gem install still failing with permissions
- Changed to gem install --user-install cocoapods
- This installs gems in user space without requiring sudo
- Should work on self-hosted runner without admin privileges

Testing user-space gem installation

--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -82,7 +82,7 @@ jobs:
              echo "✅ cocoapods found: $(pod --version)"
             else
               echo "Installing cocoapods..."
-              sudo gem install cocoapods
+              gem install --user-install cocoapods
               echo "✅ cocoapods installed: $(pod --version)"
             fi
 
