fix: make cocoapods optional due to Ruby version incompatibility
CRITICAL: Self-hosted runner has Ruby 2.6.10, cocoapods requires Ruby 3.1+
- Made cocoapods optional like xcodegen
- Build will proceed without cocoapods
- This tests if Tauri iOS build can work without these tools
- If build succeeds, we know they're not required

Testing iOS build without cocoapods

--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -80,11 +80,11 @@ jobs:
 
            if command -v pod &> /dev/null; then
              echo "✅ cocoapods found: $(pod --version)"
-            else
-              echo "Installing cocoapods..."
-              gem install --user-install cocoapods
-              echo "✅ cocoapods installed: $(pod --version)"
-            fi
+           else
+             echo "⚠️  cocoapods not found - attempting build without it"
+             echo "Note: cocoapods may be required for iOS dependencies"
+             echo "If build fails, install with: gem install cocoapods"
+           fi
 
            echo "All iOS dependencies verified!"
 
