fix: correct run indentation in iOS Project Setup
CRITICAL: run: needs 8 spaces (2 more than - name:)
- Fixed indentation to match other workflow steps
- This should resolve all YAML validation errors

Ready to test xcodegen PATH fix

--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -100,12 +100,14 @@ jobs:
 
       - name: iOS Project Setup
         run: |
-          cd src-tauri
-          rm -rf gen/apple
-          cargo tauri ios init
-          mkdir -p gen/apple/Externals/arm64/Release
-          cp target/aarch64-apple-ios/release/libsrc_tauri_lib.a gen/apple/Externals/arm64/Release/libapp.a
-          cd ..
+           # Ensure xcodegen is in PATH
+           export PATH="$HOME/bin:$PATH"
+           cd src-tauri
+           rm -rf gen/apple
+           cargo tauri ios init
+           mkdir -p gen/apple/Externals/arm64/Release
+           cp target/aarch64-apple-ios/release/libsrc_tauri_lib.a gen/apple/Externals/arm64/Release/libapp.a
+           cd ..
 
       - name: Setup Code Signing
         env:
