fix: export correct PATH in iOS Project Setup step
CRITICAL: iOS Project Setup step needs xcodegen in PATH
- Changed PATH export to include /opt/homebrew/bin
- This ensures cargo tauri ios init can find xcodegen
- xcodegen is installed at /opt/homebrew/bin/xcodegen

This should allow iOS project setup to succeed

--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -92,7 +92,7 @@ jobs:
       - name: iOS Project Setup
         run: |
            # Ensure xcodegen is in PATH
-           export PATH="$HOME/bin:$PATH"
+           export PATH="/opt/homebrew/bin:$PATH"
            cd src-tauri
            rm -rf gen/apple
            cargo tauri ios init
