fix: import certificate into login keychain instead of temporary keychain

--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -126,15 +126,11 @@ jobs:
         env:
           IOS_CERTIFICATE_P12: ${{ secrets.IOS_CERTIFICATE_P12 }}
           IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD_TEMP || secrets.IOS_CERTIFICATE_PASSWORD }}
         run: |
-          KEYCHAIN_PATH=$(mktemp -d)/build.keychain
-          security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-          security default-keychain -s "$KEYCHAIN_PATH"
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          # Import certificate into login keychain (automatic signing)
           echo "$IOS_CERTIFICATE_P12" | base64 --decode > /tmp/cert.p12
           security import /tmp/cert.p12 \
-            -k "$KEYCHAIN_PATH" \
+            -k ~/Library/Keychains/login.keychain \
             -P "$IOS_CERTIFICATE_PASSWORD" \
             -T /usr/bin/codesign \
             -T /usr/bin/xcodebuild
