fix: simplify iOS signing for self-hosted runner
- Remove separate keychain creation, use existing login keychain
- Consolidate build scripts into scripts/ directory
- Clean up temporary documentation files
- Update Xcode project settings for App Store distribution
- Add new streamlined build and upload scripts

--- a/.gitignore
+++ b/.gitignore
@@ -151,8 +151,28 @@ _*.tsx
 _*.svelte
 _*.astro
 _*.rs
-.credentials
+credentials
 
 # Local testing secrets
 .secrets.local
 .actrc.local
+docs/deployment/IOS_CREDENTIALS_REFERENCE.md
+
+# iOS Signing Files - Keep all credentials local
+.credentials
+credentials/
+*.p12
+*.p8
+*.mobileprovision
+
+# Temporary status reports and documentation (prevent future accumulation)
+*_COMPLETE.md
+*_REPORT.md
+*_SUMMARY.md
+*_STATUS.md
+SESSION_SUMMARY*.md
+PHASE*_*.md
+DAY*_*.md
+IOS_*_*.md
+*test-debug*
+*test-output*
