--- a/src-tauri/gen/apple/ExportOptions.plist
+++ b/src-tauri/gen/apple/ExportOptions.plist
@@ -3,16 +3,6 @@
 <plist version="1.0">
 <dict>
     <key>method</key>
-    <string>app-store</string>
-    <key>signingStyle</key>
-    <string>automatic</string>
-    <key>teamID</key>
-    <string>PCJU8QD9FN</string>
-    <key>stripSwiftSymbols</key>
-    <true/>
-    <key>uploadBitcode</key>
-    <false/>
-    <key>uploadSymbols</key>
-    <true/>
+    <string>debugging</string>
 </dict>
 </plist>
