--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -15,7 +15,7 @@ jobs:
   build-ios:
     name: iOS TestFlight Build
     runs-on: [self-hosted, macOS, ARM64]
-    timeout-minutes: 120
+    timeout-minutes: 60
 
     steps:
       - name: Checkout code
@@ -38,233 +38,61 @@ jobs:
            fi
            echo "✅ Running on self-hosted runner: $RUNNER_NAME"
 
-           # Check system resources
-           echo "📊 System Resources:"
-           echo "CPU: $(sysctl -n hw.ncpu) cores"
-           echo "Memory: $(echo "scale=2; $(sysctl -n hw.memsize) / 1024 / 1024 / 1024" | bc) GB"
-           echo "Available disk: $(df -h / | tail -1 | awk '{print $4}')"
-           echo "Load average: $(uptime | awk -F'load average:' '{print $2}')"
-
-      - name: Get version from Tauri config
-        id: version
-        run: |
-          # Read version from tauri.conf.json
-          VERSION=$(grep '"version"' src-tauri/tauri.conf.json | sed 's/.*"version": "\([^"]*\)".*/\1/')
-          BUILD_NUMBER=$(git rev-list --count HEAD)
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "build=$BUILD_NUMBER" >> $GITHUB_OUTPUT
-          echo "Branch: ${{ github.ref_name }}"
-          echo "Version: $VERSION (Build: $BUILD_NUMBER)"
-
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '26.1.1'
+          xcode-version: latest-stable
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: aarch64-apple-ios, aarch64-apple-ios-sim
+          targets: aarch64-apple-ios
 
       - name: Install Bun
         uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
 
-      - name: Install Tauri CLI
-        run: cargo install tauri-cli --version "^2.0.0" --locked
-
-       - name: Frontend Build
+      - name: Frontend Build
         run: |
            cd frontend
            bun install --frozen-lockfile
-           NODE_ENV=production bun run build
-           cd ..
+           bun run build
 
-       - name: Start Development Server
-        run: |
-           cd frontend
-           bun run dev &
-           DEV_SERVER_PID=$!
-           echo "DEV_SERVER_PID=$DEV_SERVER_PID" >> $GITHUB_ENV
-           cd ..
-           sleep 5  # Give server time to start
-
-       - name: Rust Pre-build
+      - name: Rust Build
         run: |
            cd src-tauri
-           export IPHONEOS_DEPLOYMENT_TARGET=14.0
-           export RUST_BACKTRACE=1
-           echo "Starting Rust build for iOS with 20-minute timeout..."
-           # Use background process with kill timeout for macOS compatibility
-           (cargo build --target aarch64-apple-ios --release --lib --verbose) &
-           BUILD_PID=$!
-           (sleep 1200 && kill $BUILD_PID 2>/dev/null && echo "Build timed out, killing process") &
-           WATCHDOG_PID=$!
-           wait $BUILD_PID 2>/dev/null
-           BUILD_EXIT=$?
-           kill $WATCHDOG_PID 2>/dev/null || true
-           if [ $BUILD_EXIT -eq 0 ]; then
-             echo "✅ Rust build completed successfully"
-           else
-             echo "❌ Rust build failed or timed out after 20 minutes"
-             echo "This indicates a hanging build process that needs investigation"
-             exit 1
-           fi
-           cd ..
+           cargo build --target aarch64-apple-ios --release --lib
 
-      - name: Install iOS Dependencies
+      - name: Generate Xcode Project
         run: |
-           # Check if required tools are available (pre-installed on self-hosted runner)
-           echo "Checking for required iOS development tools..."
+          export PATH="/opt/homebrew/bin:$PATH"
+          cd src-tauri
+          rm -rf gen/apple
+          cargo tauri ios init
+          mkdir -p gen/apple/Externals/arm64/Release
+          cp target/aarch64-apple-ios/release/libsrc_tauri_lib.a gen/apple/Externals/arm64/Release/libapp.a
 
-           # Use full paths since we know where the tools are installed
-           if /opt/homebrew/bin/xcodegen --version &> /dev/null; then
-             echo "✅ xcodegen found: $(/opt/homebrew/bin/xcodegen --version)"
-           else
-             echo "❌ xcodegen not found at /opt/homebrew/bin/xcodegen"
-             echo "Please ensure xcodegen is installed on the self-hosted runner"
-             exit 1
-           fi
+          # Configure manual signing
+          sed -i '' 's/CODE_SIGN_IDENTITY = "iPhone Developer"/CODE_SIGN_IDENTITY = "Apple Distribution"/g' gen/apple/src-tauri.xcodeproj/project.pbxproj
 
-           if /opt/homebrew/bin/pod --version &> /dev/null; then
-             echo "✅ cocoapods found: $(/opt/homebrew/bin/pod --version)"
-           else
-             echo "⚠️  cocoapods not found - attempting build without it"
-             echo "Note: cocoapods may be required for iOS dependencies"
-           fi
+          # Disable Tauri CLI build script to avoid signing conflicts
+          sed -i '' 's/shellScript = "cargo tauri ios xcode-script/shellScript = "echo \\"Using pre-built Rust library - skipping Tauri CLI\\"/g' gen/apple/src-tauri.xcodeproj/project.pbxproj
 
-           echo "All iOS dependencies verified!"
-
-      - name: iOS Project Setup
-        run: |
-           # Ensure xcodegen is in PATH
-           export PATH="/opt/homebrew/bin:$PATH"
-           cd src-tauri
-           rm -rf gen/apple
-           cargo tauri ios init
-           mkdir -p gen/apple/Externals/arm64/Release
-           cp target/aarch64-apple-ios/release/libsrc_tauri_lib.a gen/apple/Externals/arm64/Release/libapp.a
-
-            # Configure code signing for distribution
-            echo "Configuring code signing for distribution..."
-            # Set manual code signing for TestFlight distribution
-            sed -i '' 's/CODE_SIGN_IDENTITY = "iPhone Developer";/CODE_SIGN_IDENTITY = "iPhone Distribution";/g' gen/apple/src-tauri.xcodeproj/project.pbxproj
-
-           cd ..
-
-      - name: Setup Code Signing
-        env:
-          IOS_CERTIFICATE_P12: ${{ secrets.IOS_CERTIFICATE_P12 }}
-          IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
-        run: |
-          # Create temporary keychain for code signing (more reliable in CI)
-          KEYCHAIN_PATH=$RUNNER_TEMP/build.keychain
-          security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-          security default-keychain -s "$KEYCHAIN_PATH"
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-          security set-keychain-settings -t 3600 -u "$KEYCHAIN_PATH"
-
-          # Import certificate into temporary keychain
-          echo "$IOS_CERTIFICATE_P12" | base64 --decode > /tmp/cert.p12
-          security import /tmp/cert.p12 \
-            -k "$KEYCHAIN_PATH" \
-            -P "$IOS_CERTIFICATE_PASSWORD" \
-            -T /usr/bin/codesign \
-            -T /usr/bin/xcodebuild
-          rm -f /tmp/cert.p12
-
-          # Set the temporary keychain as the search list
-          security list-keychains -d user -s "$KEYCHAIN_PATH" ~/Library/Keychains/login.keychain
-
-       - name: Install Provisioning Profile
-         env:
-           IOS_PROVISIONING_PROFILE: ${{ secrets.IOS_PROVISIONING_PROFILE }}
-        run: |
-           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles/
-           echo "$IOS_PROVISIONING_PROFILE" | base64 --decode > /tmp/profile.mobileprovision
-           cp /tmp/profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/OpenCodeNexus_AppStore.mobileprovision
-           rm -f /tmp/profile.mobileprovision
-
-       - name: Copy ExportOptions.plist
-        run: |
-           cp src-tauri/ios-config/ExportOptions.plist src-tauri/gen/apple/ExportOptions.plist
-           echo "Copied ExportOptions.plist for App Store distribution"
-
-       - name: iOS Archive
-        run: |
-          cd src-tauri/gen/apple
-          mkdir -p build/archives
-          KEYCHAIN_PATH=$RUNNER_TEMP/build.keychain
-            xcodebuild \
-              -project src-tauri.xcodeproj \
-              -scheme src-tauri_iOS \
-              -configuration Release \
-              -archivePath build/archives/OpenCodeNexus.xcarchive \
-              archive \
-              DEVELOPMENT_TEAM="PCJU8QD9FN" \
-              CODE_SIGN_IDENTITY="iPhone Distribution" \
-              OTHER_CODE_SIGN_FLAGS="--keychain $KEYCHAIN_PATH"
-          cd ../../..
-
-      - name: Export IPA
-        id: export
-        run: |
-          cd src-tauri/gen/apple
-          mkdir -p build/ipa
-          xcodebuild \
-            -exportArchive \
-            -archivePath build/archives/OpenCodeNexus.xcarchive \
-            -exportOptionsPlist ExportOptions.plist \
-            -exportPath build/ipa
-          IPA_FILE=$(find build/ipa -name "*.ipa" -type f)
-          echo "ipa-path=$IPA_FILE" >> $GITHUB_OUTPUT
-          echo "IPA_FILE=$IPA_FILE" >> $GITHUB_ENV
-          cd ../../..
+      - name: Build & Archive iOS App
+        run: ./scripts/build-ios-archive.sh
 
       - name: Upload to TestFlight
-        if: success()
         env:
           APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
           APP_STORE_CONNECT_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
           APP_STORE_CONNECT_API_PRIVATE_KEY: ${{ secrets.APP_STORE_CONNECT_API_PRIVATE_KEY }}
         run: |
-          TEMP_KEY_DIR=$(mktemp -d)
-          echo "$APP_STORE_CONNECT_API_PRIVATE_KEY" | base64 --decode > "$TEMP_KEY_DIR/AuthKey.p8"
-          xcrun altool \
-            --upload-app \
-            --type ios \
-            --file "${{ env.IPA_FILE }}" \
-            --apiKey "$APP_STORE_CONNECT_API_KEY_ID" \
-            --apiIssuer "$APP_STORE_CONNECT_ISSUER_ID" \
-            --apiKeysDir "$TEMP_KEY_DIR" \
-            --verbose
-          rm -rf "$TEMP_KEY_DIR"
+          IPA_FILE=$(find build/ipa -name "*.ipa" | head -1)
+          ./scripts/upload-testflight.sh "$IPA_FILE"
 
-       - name: Stop Development Server
-         if: always()
-        run: |
-           if [ ! -z "$DEV_SERVER_PID" ]; then
-             kill $DEV_SERVER_PID 2>/dev/null || true
-             wait $DEV_SERVER_PID 2>/dev/null || true
-           fi
-
-       - name: Create Sentry Release
-         if: success()
-         env:
-           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-        run: |
-           curl -X POST \
-             -H "Authorization: Bearer $SENTRY_AUTH_TOKEN" \
-             -H "Content-Type: application/json" \
-             -d '{"version":"${{ steps.version.outputs.version }}","projects":["opencode-nexus-frontend","opencode-nexus-backend"]}' \
-             https://sentry.fergify.work/api/0/organizations/unforgettable-designs/releases/
-
-      - name: Upload Build Artifacts
-        if: always() && env.IPA_FILE != ''
+      - name: Upload Build Artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: opencode-nexus-ios-${{ steps.version.outputs.version }}-build-${{ steps.version.outputs.build }}
-          path: ${{ env.IPA_FILE }}
+          name: ios-build-${{ github.sha }}
+          path: build/ipa/*.ipa
           retention-days: 30
