--- a/src-tauri/gen/apple/project.yml
+++ b/src-tauri/gen/apple/project.yml
@@ -12,6 +12,9 @@ settingGroups:
     base:
       PRODUCT_NAME: OpenCode Nexus
       PRODUCT_BUNDLE_IDENTIFIER: com.agentic-codeflow.opencode-nexus
+      DEVELOPMENT_TEAM: PCJU8QD9FN
+      MARKETING_VERSION: 0.0.0
+      CURRENT_PROJECT_VERSION: 1
 targetTemplates:
   app:
     type: application
@@ -51,8 +54,8 @@ targets:
           - UIInterfaceOrientationPortraitUpsideDown
           - UIInterfaceOrientationLandscapeLeft
           - UIInterfaceOrientationLandscapeRight
-        CFBundleShortVersionString: 0.0.0
-        CFBundleVersion: "0.0.0"
+        CFBundleShortVersionString: "$(MARKETING_VERSION)"
+        CFBundleVersion: "$(CURRENT_PROJECT_VERSION)"
     entitlements:
       path: src-tauri_iOS/src-tauri_iOS.entitlements
     scheme:
